# cluster-deployment-automation

./: 2  MIGRATE_TO_KEA.md  assistedInstallerService.py  clusterDeployer.py  clusterStorage.py  clustersConfig.py  common.py  dependencies.sh  dhcpConfig.py  extraConfigHostRegistry.py  extraConfigImageRegistry.py  extraConfigMicroshift.py  helper_storage_deployment.py  host.py  imageRegistry.py  isoCluster.py  isoDeployer.py  keaConfig.py  pyproject.toml  requirements.txt  virtualBridge.py
cluster_deployment_automation.egg-info/: PKG-INFO  SOURCES.txt
contrib/scripts/: build-images.sh
manifests/infra/image-registry/: registry.yaml.j2
manifests/infra/storage/: persistent-volume.yaml.j2  simple-hostpath-storage.yaml  storage-dir-creator.yaml.j2
